--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "node-sass": "^9.0.0",
