--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-magnific-popup": "^1.0.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.4.0",
